actualización de texto

--- a/Parcial1/Views/Rand/Index.cshtml
+++ b/Parcial1/Views/Rand/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Parcial1.Models.Rand
 
 @{
-    ViewData["Title"] = "Generar random";
+    ViewData["Title"] = "Generar numero random";
 }
 
 <div class="text-center">
