Actualizacion de diseño

--- a/Parcial1/Views/Home/Index.cshtml
+++ b/Parcial1/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Parcial 1 Programacion III</h1>
+    <p class="lead"><b>Eduardo Enrique Rodríguez Rodríguez | 240055 </b><br> Tec.Desarrollo de Software | PARCIAL PROGRAMACION III</p>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
