--- a/Parcial1/Views/Caida/Index.cshtml
+++ b/Parcial1/Views/Caida/Index.cshtml
@@ -5,23 +5,23 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Calcular caída de dato</h1>
+    <h1>Calcular caída de dato</h1>
 
     <form asp-controller="Caida" asp-action="CaidaCalcular">
-
-        <label>Calcular caída de un dato</label>
         <br>
-        <label>Ingrese la altura (el dato será recibido en metros)</label>
-        <input asp-for="Dato">
+        <img src="https://www.youphysics.education/wp-content/uploads/es/vectores-posicion-velocidad-y-aceleracion/problemas-de-vectores-rva/vectores-rva-problema-6/P6-Mono.png" class="img-thumbnail" style="width:100px;" alt="caida" />
+        <br><br>
+        <label>Ingrese la altura <br><p class="text-muted">(el dato será recibido en metros)</p></label>
         <br>
-        <input type="submit" value="CaidaCalcular">
-
+        <input asp-for="Dato" class="form-control">
+        <br>
+        <input type="submit" value="CaidaCalcular" class="btn btn-success">
     </form>
-
-    <td>@Html.DisplayNameFor(model => model.Result)</td>
-    <td>@Html.DisplayTextFor(model => model.Result)</td>
+    <br>
+    <td class="h6">@Html.DisplayNameFor(model => model.Result)</td>
+    <td class="h6"><b class="h5">@Html.DisplayTextFor(model => model.Result)</b></td>
 
     <br><br><br><br><br>
-    <p>Eduardo Enrique Rodríguez Rodríguez | 240055 <br> Tec.Desarrollo de Software | PARCIAL PROGRAMACION III</p>
+    <p class="lead"><b>Eduardo Enrique Rodríguez Rodríguez | 240055 </b><br> Tec.Desarrollo de Software | PARCIAL PROGRAMACION III</p>
 
 </div>
