--- a/Parcial1/Views/Shared/_Layout.cshtml
+++ b/Parcial1/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Caida" asp-action="Index">Calcular caida</a>
+                            <a class="nav-link text-success" asp-area="" asp-controller="Caida" asp-action="Index">Calcular caida</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Rand" asp-action="Index">Generar numero random</a>
+                            <a class="nav-link text-primary" asp-area="" asp-controller="Rand" asp-action="Index">Generar numero random</a>
                         </li>
                     </ul>
                 </div>
